applications/manifests/aws-cli/aws-cli-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-cli-allowed
  labels:
    app: aws-cli-allowed
spec:
  serviceAccountName: s3access
  containers:
  - image: amazon/aws-cli
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: curl
  restartPolicy: Always
