applications/manifests/aws-cli/aws-cli-blocked.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aws-cli-blocked
  labels:
    app: aws-cli-blocked
spec:
  containers:
  - image: amazon/aws-cli
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: curl
  restartPolicy: Always
