applications/manifests/aws-cli/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-api
  namespace: open-api
  labels:
    app.kubernetes.io/name: open-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-api
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
