applications/manifests/aws-cli/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aws-cli-blocked
spec:
  podSelector:
    matchLabels:
      app: aws-cli-blocked
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53  
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: open-api
